# deep-dive-fast-api

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.docs/: curl-requests.md  curl-requests.sh  fastapi-concepts.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml
app/: config.py  middlewares.py  models.py
app/routers/: base.py  emoji.py  mood.py  vending.py
app/services/: user.py
app/utils/: auth.py  mongo.py
resources/: init-mongo.js  settings.toml
scripts/: create_user.py  seed_user.py
static/: index.html
tests/: conftest.py  test_models.py  test_routers.py  test_services.py
