[project]
name = "fast-app-api"
version = "1"
description = "Fast App - API"
authors = [{ name = "Anthony Caliani", email = "avcaliani.it@gmail.com" }]
license = "MIT"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.73.0,<0.74.0",
    "uvicorn[standard]>=0.12.0,<0.16.0",
    "email-validator>=1.1.1,<2.0.0",
    "requests>=2.24.0,<3.0.0",
    "dynaconf>=3.1.7,<4.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.5,<0.0.6",
    "motor>=2.5.1,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.1,<8.0.0",
    "pytest-cov>=3.0.0,<4.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_first_party = []
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["app", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=app"

[tool.coverage.report]
exclude_lines = ["nocover"]
show_missing = true
omit = ["*/dependencies.py", "*/middlewares.py", "*/models.py"]

[tool.skjold]
sources = ["pypa"]
report_only = true
verbose = true
