[project]
name = "duff-api"
version = "1.1.0"
description = "Duff API"
readme = "README.md"
authors = [{ name = "Anthony Caliani", email = "avcaliani.it@gmail.com" }]
license = "MIT"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.139.2,<0.140.0",
    "uvicorn[standard]>=0.51.0,<0.52.0",
    "email-validator>=2.3.0,<3.0.0",
    "dynaconf>=3.3.2,<4.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.32,<0.1.0",
    "motor>=3.7.1,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "httpx2>=2.7.0,<3.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_first_party = []
force_grid_wrap = 0
use_parentheses = true
known_local_folder = ["app", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=app"

[tool.coverage.report]
exclude_lines = ["nocover"]
show_missing = true
omit = ["*/dependencies.py", "*/middlewares.py", "*/models.py"]

[tool.skjold]
sources = ["pypa"]
report_only = true
verbose = true
