[project]
name = "dunder-mifflin-api"
version = "3.0.0"
description = "Dunder Mifflin Rewards API"
readme = "README.md"
authors = [{ name = "Anthony Caliani", email = "avcaliani.it@gmail.com" }]
license = "MIT"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.139.2,<0.140.0",
    "uvicorn[standard]>=0.51.0,<0.52.0",
    "email-validator>=2.3.0,<3.0.0",
    "dynaconf>=3.3.2,<4.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-multipart>=0.0.32,<0.1.0",
    "motor>=3.7.1,<4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "httpx2>=2.7.0,<3.0.0",
    "ruff==0.15.22",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["app", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E = pycodestyle
# F = Pyflakes
# I = isort
# UP = pyupgrade

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-vv --tb=native --cov=app"

[tool.coverage.report]
exclude_lines = ["nocover"]
show_missing = true
omit = ["*/dependencies.py", "*/middlewares.py", "*/models.py"]

[tool.skjold]
sources = ["pypa"]
report_only = true
verbose = true
